--- a/M1U4/cv.html
+++ b/M1U4/cv.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>NOMBRE Y APELLIDO</h1>
     <img src="img/cv.jpg" alt="cv">
 
-    <h3>Edad</h3>
-    <h3>Domicilio</h3>
+    <h3>Edad:</h3><br>
+    <h3>Domicilio:</h3><br>
     <h4>¿Qué series me gustan?</h4>
     <ul>
         <li>The Crown</li>
@@ -24,7 +25,7 @@
         <li>Sin novedad en el frente</li>
     </ul>
     <h4>Perfil</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum tenetur dolorum sapiente harum ullam et eaque aliquam in magnam. Inventore!</p>
+    <p class="destacado">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum tenetur dolorum sapiente harum ullam et eaque aliquam in magnam. Inventore!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eius delectus quas soluta ullam natus voluptate tempore, quis mollitia hic sunt eveniet aliquam ad ducimus optio est. Non, unde laboriosam.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus harum excepturi sed alias dolor, dolorem consequatur omnis totam reprehenderit fugit explicabo assumenda soluta ipsa. A eos possimus nam accusantium placeat!</p>
     <h5>Si querés contactarme podes completar el siguiente <a href="form.html" target="_blank">formulario</a></h5>
